<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="3"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@color/keyboard">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">
                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtone"
                    android:text="@string/_1"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center"/>
                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txttwo"
                    android:text="@string/_2"
                    android:textSize="30sp"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black"/>
                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtabc"
                    android:text="@string/abc"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
            <customfonts.MyTextView_Roboto_Medium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtthree"
                android:text="@string/three"
                android:textSize="30sp"
                android:textColor="@android:color/black"
                android:layout_gravity="center"/>
                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtdef"
                    android:text="@string/def"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="3"
            android:orientation="horizontal"
            android:background="@color/keyboard">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtfour"
                    android:text="@string/_4"
                    android:textSize="30sp"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center"/>
                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtghi"
                    android:text="@string/ghi"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtfive"
                    android:text="@string/_5"
                    android:textSize="30sp"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center"/>
                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtjkl"
                    android:text="@string/jkl"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtsix"
                    android:text="@string/_6"
                    android:textSize="30sp"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center"/>
                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtmno"
                    android:text="@string/mno"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="3"
            android:orientation="horizontal"
            android:background="@color/keyboard">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtseven"
                    android:text="@string/_7"
                    android:textSize="30sp"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center"/>
                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtpqrs"
                    android:text="@string/pqrs"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/view_line"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txteight"
                    android:text="@string/_8"
                    android:textSize="30sp"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center"/>
                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txttuv"
                    android:text="@string/tuv"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtnine"
                    android:text="@string/_9"
                    android:textSize="30sp"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center"/>
                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtwxyz"
                    android:text="@string/wxyz"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="3"
            android:orientation="horizontal"
            android:gravity="center">

            <customfonts.MyTextView_Roboto_Medium
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/txtok"
                android:textSize="30sp"
                android:background="#acacac"
                android:textColor="@android:color/black"
                android:gravity="center"/>

            <customfonts.MyTextView_Roboto_Medium
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/txtzero"
                android:text="@string/_0"
                android:textSize="30sp"
                android:background="@color/keyboard"
                android:textColor="@android:color/black"
                android:gravity="center"/>


            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#acacac"
                android:padding="22dp"
                android:src="@drawable/ic_delete"/>

        </LinearLayout>



</LinearLayout>